Enhance autonomous pathing